--- a/css/style.scss
+++ b/css/style.scss
@@ -128,6 +128,15 @@ header{
 
 $font:'YuGothic','Yu Gothic','sans-serif';
 
+// メディアクエリ
+$tab: 750px;
+
+@mixin table {
+  @media (max-width: ($tab)) {
+    @content;
+  }
+}
+
 .red-storn{
   div{
     position: relative;
@@ -161,7 +170,33 @@ $font:'YuGothic','Yu Gothic','sans-serif';
   top: 15%;
   right: -5%;
   z-index: 5;
+  }
 }
+
+.red-storn{
+  @include table(){
+    .red-storn-1{
+      width: 93px;
+      height: 93px;
+      position: absolute;
+      top: 7%;
+      right: 29%;
+    }
+    .red-storn-2{
+      width: 93px;
+      height: 93px;
+      position: absolute;
+      top: 34%;
+      right: 6%;
+    }
+    .blue-storn{
+      width: 133px;
+      height: 133px;
+      position: absolute;
+      top: 11%;
+      right: 3%;
+    }
+  }
 }
 
 
@@ -221,6 +256,48 @@ $font:'YuGothic','Yu Gothic','sans-serif';
 }
 
 $color-black:#1b1b1b;
+
+// メディアクエリ
+$tab: 750px;
+
+@mixin table {
+  @media (max-width: ($tab)) {
+    @content;
+  }
+}
+
+.site-title{
+  @include table(){
+    hgroup{
+      position: relative;
+      bottom: -90px;
+      h1{
+        font-size: 43px;
+      }
+      p{
+        font-size: 14px;
+        white-space: normal;
+        max-width: 200px;
+        position: relative;
+        top: -20px;
+      }
+    }
+    figure{
+      position: relative;
+      right: 50%;
+      
+      img{
+      width: 860px;
+      max-width: calc(100% - 300px);
+      position: relative;
+      top: -120px;
+      }
+    }
+  }
+}
+
+
+
 
 
 // 矢印初期値
@@ -365,6 +442,13 @@ $color-black:#1b1b1b;
 
 $color-blue:#015994;
 $font-wei:500;
+
+.now-price{
+  @include table(){
+    margin: 60px auto 0px;
+  }
+}
+
 
 // ボタン用
 .btn,
@@ -673,6 +757,15 @@ $color-red:rgb(201, 55, 74);
   padding: 1px 1px;
 }
 
+.news-info{
+  @include table(){
+    display: flex;
+    flex-flow: column;
+    row-gap: 25px;
+  }
+}
+
+
 .business-title{
   padding-bottom: 60px;
   line-height: 1.4;
@@ -880,6 +973,14 @@ a{
   position: sticky;
   top: 120px;
 }
+
+#business{
+  @include table(){
+    display: flex;
+    flex-flow: column;
+  }
+}
+
 
 // 
 rela-tit{
@@ -1306,6 +1407,122 @@ $line-color:rgb(194, 200, 207);
   }
 }
 
+.relations-type-b{
+  img{
+    width: 100%;
+    max-width: 510px;
+    border-radius: 5px;
+    margin: 0;
+  }
+
+  dt{
+    color: $color-blue;
+    font-family: 'Tahoma','Constantia',sans-serif;
+    margin: 0;
+    font-size: 18px;
+  }
+
+  dd{
+    color: $color-black;
+    font-family: $font;
+    margin: 0;
+    font-weight: 700;
+  }
+
+  p{
+    margin: 0;
+  }
+}
+
+.relations-type-b{
+  div{
+    display: flex;
+    align-items: center;
+    max-width: 490px;
+    width: 100%;
+    
+    dl{
+      margin-left: 3%;
+    }
+
+    p{
+      margin-left: auto;
+    }
+  }
+}
+
+.relations-type-b{
+  display: none;
+  ul{
+    display: flex;
+    overflow: scroll;
+    column-gap: 20px;
+  }
+
+  li{
+    min-width: 80%;
+  }
+  @include table(){
+      display: block;
+      position: relative;
+      bottom: 180px;
+    }
+}
+
+// 
+$middl:880px;
+
+@mixin middl {
+  @media (max-width: ($middl)) {
+    @content;
+  }
+}
+
+
+
+.relations{
+  @include middl(){
+    display: block;
+    position: relative;
+    top: -50px;
+
+    .relations-sec{
+      width: 100%;
+
+      h4{
+        margin-top: 60px;
+        margin-bottom: 40px;
+      }
+
+      .relations-link{
+        margin-left: auto;
+        margin-right: 10px;
+        position: relative;
+        top: 570px;
+
+        @include table(){
+          position: relative;
+          top: 410px;
+        }
+      }
+  }
+
+  .grid{
+    @include middl(){
+      width: 100%;
+      max-width: 716px;
+      margin: 0 auto;
+    }
+
+    @include table(){
+      display: none;
+      }
+    }
+  }
+}
+
+
+
 .recruit-title{
   text-align: center;
   line-height: 1.3;
@@ -1372,7 +1589,7 @@ $line-color:rgb(194, 200, 207);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: 100vw;
+  max-width: 100%;
   height: 672px;
   border-radius: 15px;
   display: flex;
@@ -1380,7 +1597,15 @@ $line-color:rgb(194, 200, 207);
   justify-content: center;
   align-items:center;
   row-gap: 55px;
+  padding: 0 30px;
 }
+
+.recruit-sec{
+  @include table(){
+    max-height: 534px;
+  }
+}
+
 
 .Our-title{
   line-height: 1.3;
@@ -1517,7 +1742,42 @@ $line-color:rgb(194, 200, 207);
 
 .Our-s{
   padding-bottom: 70px;
+
+  @include table(){
+    position: relative;
+    top: -50px;
+  }
 }
+
+.Our-s1{
+  @include table(){
+    display: flex;
+    flex-flow: column;
+    row-gap: 110px;
+  }
+}
+
+.Our-s2-group{
+  @include table(){
+    display: flex;
+    flex-flow: column;
+    position: relative;
+
+    .group1{
+      max-width: 578px;
+      position: absolute;
+      top: -480px;
+    }
+
+    .group2{
+      max-width: 578px;
+      position: absolute;
+      top: -10px;
+    }
+  }
+}
+
+
 
 .foot-top-left{
   img{
@@ -1698,7 +1958,7 @@ $line-color:rgb(194, 200, 207);
     position: relative;
     &::after{
       @extend under-line;
-      width: 95%;
+      width: 100%;
       background-color: #646464;
       position: absolute;
       right: 10px;
@@ -1736,4 +1996,231 @@ $line-color:rgb(194, 200, 207);
 footer{
   background-color: #222121;
   padding-top: 70px;
+}
+
+footer{
+  @include middl(){
+    .foot-sec{
+      display: flex;
+      flex-flow: column;
+      gap: 30px;
+    }
+    .foot-top-left{
+      margin-right: auto;
+      padding-left: 10px;
+    }
+    .foot-top-right{
+      margin-right: auto;
+      padding-left: 20px;
+    }
+    .foot-grid{
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 287px 1fr;
+      position: relative;
+      right: 0%;
+      padding-left: 20px;
+    }
+  }
+}
+
+footer{
+  @include table(){
+    .foot-grid{
+      grid-template-columns: 1fr;
+      grid-template-rows: 13% 9% 9% 18% 500px;
+      gap: 40px;
+    }
+    dl{
+      padding: 0 15px;
+    }
+    dt{
+      width: calc(100% + 320px);
+      br{
+        display: none;
+      }
+      span{
+        margin-right: 10px;
+
+      }
+    }
+  }
+}
+
+.foot-grid-1{
+  @include table(){
+    dd{
+      position: relative;
+
+      & p:nth-child(5){
+        position: absolute;
+        top: 0px;
+        right: -100px;
+      }
+
+      & p:nth-child(6){
+        position: absolute;
+        top: 25px;
+        right: -120px;
+      }
+
+      & p:nth-child(7){
+        position: absolute;
+        top: 50px;
+        right: -140px;
+      }
+    }
+  }
+}
+
+.foot-grid-2{
+  @include table(){
+    dd{
+      position: relative;
+
+      & p:nth-child(3){
+        position: absolute;
+        top: 0px;
+        right: -230px;
+      }
+    }
+  }
+}
+
+.foot-grid-3{
+  @include table(){
+    dd{
+      position: relative;
+
+      & p:nth-child(3){
+        position: absolute;
+        top: 0px;
+        right: -130px;
+      }
+    }
+  }
+}
+
+.foot-grid-4{
+  @include table(){
+    dd{
+      position: relative;
+
+      & p:nth-child(5){
+        position: absolute;
+        top: 0px;
+        right: -200px;
+      }
+
+      div{
+        & p:nth-child(1){
+        position: absolute;
+        top: 27px;
+        right: -220px;
+        }
+
+      & p:nth-child(2){
+        position: absolute;
+        top: 54px;
+        right: -230px;
+        }
+
+      & p:nth-child(3){
+        position: absolute;
+        top: 84px;
+        right: -170px;
+        }
+
+      & p:nth-child(4){
+        position: absolute;
+        top: 112px;
+        right: -240px;
+        }
+      }      
+    }
+  }
+}
+
+.foot-grid-5{
+  @include table(){
+    dd{
+      position: relative;
+
+      & p:nth-child(5){
+        position: absolute;
+        top: 0px;
+        right: -150px;
+      }
+
+      & p:nth-child(6){
+        position: absolute;
+        top: 27px;
+        right: -150px;
+        }
+
+      & p:nth-child(7){
+        position: absolute;
+        top: 57px;
+        right: -125px;
+        }
+
+      & p:nth-child(8){
+        position: absolute;
+        top: 84px;
+        right: -125px;
+        }
+
+      & p:nth-child(9){
+        position: absolute;
+        top: 110px;
+        right: -125px;
+        }
+
+        & p:nth-child(11){
+        position: absolute;
+        top: 165px;
+        right: -125px;
+        }
+
+      #f-grid-5-div2 {
+        p{
+          position: absolute;
+          top: 138px;
+          right: -220px;
+        }
+      }
+    }
+  }
+}
+
+.foot-top-left{
+  position: relative;
+  @include table(){
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    max-width: fit-content;
+    > p:nth-child(1){
+      a{
+        margin: 0 auto;
+        position: relative;
+        left: -30px;
+      }
+    }
+    > p:nth-child(2){
+      position: absolute;
+      top: 1380px;
+      right: 30px;
+      width: max-content;
+    }
+  }
+}
+
+.foot-top-right{
+  @include table(){
+    display: flex;
+    flex-flow: column;
+    gap: 30px;
+
+    
+  }
 }
